# parionsfdj

./: LICENSE  README.md  ex.json  parionsfdj.cabal  stack.yaml
src/: Parse.hs
src/ParionsFDJ/: Bet.hs  JSON.hs  Parse.hs
src/ParionsFDJ/JSON/: Event.hs  Formule.hs  Outcome.hs
src/ParionsFDJ/Parse/: Event.hs  Football.hs  Formule.hs  Outcome.hs  Parsable.hs
test/: Spec.hs  formule.json  outcome.json
