name:                parionsfdj
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vquintin/parionsfdj#readme
license:             BSD3
license-file:        LICENSE
author:              Virgile Quintin
maintainer:          virgile.quintin@gmail.com
copyright:           2017 Virgile Quintin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , ParionsFDJ.JSON
  build-depends:       base >= 4.7 && < 5
                     , aeson == 1.1.2.0
                     , bytestring == 0.10.8.1
                     , text == 1.2.2.2
                     , time == 1.6.0.1
  default-language:    Haskell2010

executable parionsfdj-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parionsfdj
  default-language:    Haskell2010

test-suite parionsfdj-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parionsfdj
                     , aeson == 1.1.2.0
                     , bytestring == 0.10.8.1
                     , HUnit == 1.5.0.0
                     , time == 1.6.0.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vquintin/parionsfdj
